fixed header and table spacing

--- a/user-directory/src/components/Header.css
+++ b/user-directory/src/components/Header.css
@@ -15,7 +15,7 @@
 }
 
 .form-control {
-  width: 15%;
+  width: 15% !important;
   margin: auto;
   display: block;
 }
